# chat-ai-api

./: .gitignore  main.py  pyproject.toml  requirements.txt
routers/: chat.py  check.py  root.py
